# extending-jax

./: .gitignore  demo.ipynb  dev.py  environment.yml  pyproject.toml
lib/: addition.h  cpu_ops.cc  gpu_ops.cc  kernel_helpers.h  kernels.cc.cu  kernels.h  pybind11_kernel_helpers.h
src/glcm_jax/: __init__.py  glcm_jax.py
