[project]
name = "glcm_jax"
description = "CUDA accelerated GLCM"
readme = "README.md"
authors = [{ name = "ianto xi", email = "iantolinxi@gmail.com" }]
requires-python = ">=3.9"
license = { file = "LICENSE" }
urls = { Homepage = "https://github.com/intrepidlemon/extending-jax" }
dependencies = ["jax>=0.4.16", "jaxlib>=0.4.16"]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["pybind11>=2.6", "scikit-build-core>=0.5"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/glcm_jax/glcm_jax_version.py"]
wheel.install-dir = "glcm_jax"
minimum-version = "0.5"
build-dir = "build/{wheel_tag}"

[tool.setuptools_scm]
write_to = "src/glcm_jax/glcm_jax_version.py"
